--- a/projects/templates/projects/about.html
+++ b/projects/templates/projects/about.html
@@ -5,11 +5,11 @@
     <style>
         @font-face {
             font-family: "Keystone"; /* You can choose any name for the font-family */
-            src: url("/static/fonts/Keystone.ttf"); /* Replace "your-font-file.ttf" with the actual filename of the font */
+            src: url("/staticfiles/fonts/Keystone.ttf"); /* Replace "your-font-file.ttf" with the actual filename of the font */
         }
         @font-face {
             font-family: "Gexo"; /* You can choose any name for the font-family */
-            src: url("/static/fonts/Gexo\ Sans\ Regular.ttf"); /* Replace "your-font-file.ttf" with the actual filename of the font */
+            src: url("/staticfiles/fonts/Gexo\ Sans\ Regular.ttf"); /* Replace "your-font-file.ttf" with the actual filename of the font */
         }
             body {
                 background: radial-gradient(circle, rgb(37, 7, 0), rgb(0, 0, 0), rgb(89, 50, 131));
