--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,11 @@
 <style>
                 @font-face {
         font-family: "Keystone"; /* You can choose any name for the font-family */
-        src: url("/staticfiles/fonts/Keystone.ttf"); /* Replace "your-font-file.ttf" with the actual filename of the font */
+        src: url("/static/fonts/Keystone.ttf"); /* Replace "your-font-file.ttf" with the actual filename of the font */
     }
     @font-face {
         font-family: "Gexo"; /* You can choose any name for the font-family */
-        src: url("/staticfiles/fonts/Gexo\ Sans\ Regular.ttf"); /* Replace "your-font-file.ttf" with the actual filename of the font */
+        src: url("/static/fonts/Gexo\ Sans\ Regular.ttf"); /* Replace "your-font-file.ttf" with the actual filename of the font */
     }
             body {
             margin: 0;
@@ -132,7 +132,7 @@
 <title> ADRIAN NEAH LOZADA </title>
 
 <div class="image-container">
-    <img src="staticfiles/images/IMG_0836.JPG" alt="Image Description">
+    <img src="static\images\IMG_0836.JPG" alt="Image Description">
     <div class="fade-gradient"></div>
 </div>
 
