--- a/templates/home.html
+++ b/templates/home.html
@@ -132,7 +132,7 @@
 <title> ADRIAN NEAH LOZADA </title>
 
 <div class="image-container">
-    <img src="static\images\IMG_0836.JPG" alt="Image Description">
+    <img src="static/images/IMG_0836.JPG" alt="Image Description">
     <div class="fade-gradient"></div>
 </div>
 
